# networkHardware

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  initial_equipment_types.json  pyproject.toml
networkHardware/: manage.py
networkHardware/equipment/: admin.py  constants.py  models.py  serializers.py  services.py  utils.py  views.py
networkHardware/equipment/migrations/: 0001_initial.py  0002_alter_equipment__id_alter_equipmenttype__id.py  0003_equipmenttype_serial_number_mask.py  0004_alter_equipment__id_alter_equipmenttype__id.py
networkHardware/networkHardware/: asgi.py  settings.py  urls.py  wsgi.py
networkHardware/users/: views.py
