[tool.poetry]
name = "network-hardware"
version = "0.1.0"
description = ""
authors = ["spirin-vadim <vadis99@ya.ru>"]
readme = "README.md"
packages = [{ include = "network_hardware" }]

[tool.poetry.dependencies]
python = ">=3.13"
django = "^5.2.1"
djangorestframework = "^3.16.0"
python-decouple = "^3.8"
mysqlclient = "^2.2.7"
djangorestframework-simplejwt = "^5.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
